--- a/index.html
+++ b/index.html
@@ -2,6 +2,41 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+
+<script>
+  window.pixelId = "69826ea6e0ba6c38673e2306";
+  var a = document.createElement("script");
+  a.setAttribute("async", "");
+  a.setAttribute("defer", "");
+  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+  document.head.appendChild(a);
+</script>
+
+
+<script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  data-utmify-prevent-xcod-sck
+  data-utmify-prevent-subids
+  async
+  defer
+></script>
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1588270742480343');
+fbq('track', 'PageView');
+</script>
+<!-- End Meta Pixel Code -->
+
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guia Anti-Manada | Relatório Estratégico</title>
@@ -57,6 +92,9 @@
 <link rel="stylesheet" href="/index.css">
 </head>
   <body>
+    <noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1588270742480343&ev=PageView&noscript=1"
+/></noscript>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
